labs/examples/design-patterns-examples/src/com/examples/design/solid/d/good/Monitor.java
package com.examples.design.solid.d.good;

public class Monitor {


}
