labs/examples/design-patterns-examples/src/com/examples/design/solid/d/bad/Monitor.java
package com.examples.design.solid.d.bad;

public class Monitor {

}
